2011-12-27  Karl Berry  <karl@gnu.org>

	* NEWS: mention Info's virtual-index.
	* doc/refcard/txirefcard.tex: likewise.
	* doc/info-stnd.texi (Searching Commands): tweak text.
	* info/infodoc.c: add to initial command list in help text.

2011-12-26  Karl Berry  <karl@gnu.org>

	* NEWS: new commands @atchar{} @lbracechar{} @rbracechar{}
        @backslashchar{}.
	* doc/texinfo.txi (Atsign Braces Comma Backslash): rename node,
	leave @anchor behind.
	(Inserting an Atsign),
	(Inserting Braces),
	(Inserting a Backslash),
	(math),
	* doc/refcard/txirefcard.tex: document them.
        * doc/texinfo.tex (@normalbackslash): output a typewriter \
        even in math mode.

2011-12-25  Karl Berry  <karl@gnu.org>

	* NEWS: new commands @inlinefmt and @inlineraw.
	* doc/texinfo.txi (Inline Conditional Commands),
	* doc/refcard/txirefcard.tex: document them.
	* doc/texinfo.tex (\inlinefmt, \doinlinefmt,
        \inlineraw, \doinlineraw, \doinlinerawtwo, \outfmtnametex): new macros.
        
        * doc/texinfo.tex (\atchar, \lbracechar, \rbracechar, \backslashchar):
        more new macros for forthcoming new commands.

2011-12-24  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\errormsg): \indexnofonts rather than \indexdummies.
	
	* doc/texinfo.tex (\txiescapepdf): new macro, using the pdftex
	primitive \pdfescapestring.
	(\backslashparens, \activebackslashdouble, \HyPsdSubst,
        \HyReturnAfterFi): no longer needed.  change calls.
        
        * doc/texinfo.tex (\dopdfoutline): output (literal) brace chars;
        previous hack had become inoperative.
	(\lbracecharliteral, \rbracecharliteral): new macros.

2011-12-23  Karl Berry  <karl@gnu.org>

	* NEWS: new command @errormsg.
	* doc/texinfo.tex (\errormsg): new command.
	(\commondummiesnofonts): add \anchor for the heck of it.
	* doc/texinfo.txi (@@-Command List): add it.  
	* doc/refcard/txirefcard.txi (Ending): likewise.

	* doc/texinfo.txi (Generic Translator texi2any): rename node.